[package]
name = "my_example_actix3"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.3"
actix-files = "0.5"
actix-rt = "2.4"
sqlx = { version = "0.5", default-features = false, features = ["postgres"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.10", features = ["rustls-tls"] }
